# My-practice

01-Reverse-Permutation/: main.cpp
02-Palindromes/: CMakeLists.txt  main.cpp
03-Template-Print/: CMakeLists.txt  main.cpp
04-Checking-Work/: CMakeLists.txt  main.cpp
05-Trains/: CMakeLists.txt  main.cpp
06-Saw-Num-Earlier/: CMakeLists.txt  main.cpp
07-Сommon-Letters/: CMakeLists.txt  main.cpp
08-Transport/: CMakeLists.txt  main.cpp
09-Shape/: CMakeLists.txt  main.cpp
10-Algorithm-Unique/: CMakeLists.txt  main.cpp
11-Algorithm-Set-Difference/: CMakeLists.txt  main.cpp
12-Approximate-Binary-Search/: CMakeLists.txt  main.cpp
13-Adapters-and-Views/: CMakeLists.txt  main.cpp
14-Engine/: CMakeLists.txt  main.cpp
15-queue-airport/: CMakeLists.txt  main.cpp
16-CMake-training/: CMakeLists.txt
